# not-monolithic-experiments

./: .gitpod.yml  README.md  bff-deployment.yaml  bff.Dockerfile  centro-distribucion.Dockerfile  centrodistribucion-deployment.yaml  centrodistribucion.Dockerfile  clean-data.sh  docker-compose.yml  entregas-deployment.yaml  entregas.Dockerfile  init.sql  ordenes-deployment.yaml  ordenes.Dockerfile  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
manejoOrdenes/: .gitignore  requirements.txt
manejoOrdenes/src/eda/api/: __init__.py  database.db  ordenes.py  pedidos.py
manejoOrdenes/src/eda/config/: db.py
src/bff_web/: consumidores.py  despachadores.py  main.py  utils.py
src/bff_web/api/v1/: consultas.py  esquemas.py  mutaciones.py
src/centrodistribucion/api/: __init__.py
src/centrodistribucion/config/: db.py  uow.py
src/centrodistribucion/modulos/ordenes/aplicacion/: __init__.py  handlers.py
src/centrodistribucion/modulos/ordenes/dominio/: entidades.py  eventos.py  (+1 more)
src/centrodistribucion/seedwork/infraestructura/: uow.py  utils.py
src/entregas/api/: __init__.py
src/entregas/config/: db.py  uow.py
src/entregas/seedwork/dominio/: entidades.py  repositorios.py
src/entregas/seedwork/infraestructura/: uow.py
src/ordenes/api/: __init__.py  pedidos.py
src/ordenes/config/: db.py  uow.py
src/ordenes/seedwork/dominio/: objetos_valor.py
src/ordenes/seedwork/infraestructura/: uow.py
src/test-eventos/: Dockerfile  consumir-ordenalistada.py  consumir-ordenescreadas.py  envio-crearorden.py  envio-ordencreada.py  requirements.txt
(+83 files in other folders)
