[project]
name = "experimentacion"
version = "1.0.0"
authors = [
  { name="Pedro, Andres, Ayrton, Miguel", email="ps.lizarazo@uniandes.edu.co" },
  
]
description = "experimentacion "
readme = "README.md"
requires-python = ">=3.10"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = [
  ".", "src",
]